<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_camera_msgs</name>
  <version>0.0.0</version>
  <description>A ROS2 package for custom camera services and messages.</description>
  <maintainer email="khyoo0825@gmail.com">addinedu</maintainer>
  <license>Apache 2.0</license> <!-- 라이선스 정보 업데이트 -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend> <!-- std_msgs 의존성 추가 -->
  <build_depend>rosidl_default_runtime</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
